--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 </head>
 
 <body>
-    <script src="https://cdn.cai.tools.sap/webchat/webchat.js" channelId="68e02990-d314-4e9a-9c65-7476a0eb5e27"
-        token="5a87a31113a397df45c8e5dddb506312" id="cai-webchat">
-        </script>
+    <script
+src="https://cdn.cai.tools.sap/webchat/webchat.js"
+channelId="4ac6314d-22ed-4781-8c00-3ffaebf42b88"
+token="c3aebe4efd436875f349e3d93ba36c09"
+id="cai-webchat">
+</script>
     <meta name="viewport" content="width=device-width">
 </body>
 
