--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
 </head>
 
 <body>
-    <script
-src="https://cdn.cai.tools.sap/webchat/webchat.js"
-channelId="4ac6314d-22ed-4781-8c00-3ffaebf42b88"
-token="c3aebe4efd436875f349e3d93ba36c09"
-id="cai-webchat">
-</script>
+<script src="https://cdn.cai.tools.sap/webchat/webchat.js" channelId="a4e1d575-c801-442a-8a1d-e906f138fafe" token="4c7fb82e6647e04e447319cd8acc40eb" id="cai-webchat"> </script>
     <meta name="viewport" content="width=device-width">
 </body>
 
